--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,16 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tiptap/extension-placeholder": "^2.2.0",
+        "@tiptap/extension-underline": "^2.2.0",
+        "@tiptap/pm": "^2.1.16",
+        "@tiptap/react": "^2.1.16",
+        "@tiptap/starter-kit": "^2.1.16",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "react": "^18.2.0",
-        "react-dom": "^18.2.0"
+        "react-dom": "^18.2.0",
+        "usehooks-ts": "^2.10.0"
     },
     "devDependencies": {
         "@types/react": "^18.2.43",
@@ -28,6 +34,7 @@
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
         "typescript": "^5.2.2",
-        "vite": "^5.0.8"
+        "vite": "^5.0.8",
+        "vite-plugin-svgr": "^4.2.0"
     }
 }
