--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,8 @@
     "main": "dist/index.js",
     "scripts": {
         "dev": "nodemon src/server.ts",
+        "migrate-up": "migrate-mongo up",
+        "migrate-down": "migrate-mongo down",
         "lint": "eslint ."
     },
     "author": "",
@@ -20,7 +22,11 @@
         "typescript": "^5.3.3"
     },
     "dependencies": {
+        "body-parser": "^1.20.2",
         "dotenv": "^16.4.1",
-        "express": "^4.18.2"
+        "express": "^4.18.2",
+        "migrate-mongo": "^11.0.0",
+        "mongodb": "^6.3.0",
+        "mongoose": "^8.1.1"
     }
 }
