--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
         "express": "^4.18.2",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-router-dom": "^6.21.3",
         "usehooks-ts": "^2.10.0"
     },
     "devDependencies": {
