--- a/backend/package.json
+++ b/backend/package.json
@@ -7,17 +7,24 @@
         "dev": "nodemon src/server.ts",
         "migrate-up": "migrate-mongo up",
         "migrate-down": "migrate-mongo down",
+        "test": "jest",
         "lint": "eslint ."
     },
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@babel/core": "^7.23.9",
+        "@babel/preset-env": "^7.23.9",
+        "@babel/preset-typescript": "^7.23.3",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.21",
+        "@types/jest": "^29.5.12",
         "@typescript-eslint/eslint-plugin": "^6.19.1",
         "@typescript-eslint/parser": "^6.19.1",
+        "babel-jest": "^29.7.0",
         "eslint": "^8.56.0",
         "nodemon": "^3.0.3",
+        "ts-jest": "^29.1.2",
         "ts-node": "^10.9.2",
         "typescript": "^5.3.3"
     },
