--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,6 +15,7 @@
         "@tiptap/pm": "^2.1.16",
         "@tiptap/react": "^2.1.16",
         "@tiptap/starter-kit": "^2.1.16",
+        "clsx": "^2.1.0",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
         "react": "^18.2.0",
