--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,8 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@tanstack/react-query": "^5.18.1",
+        "@tanstack/react-query-devtools": "^5.18.1",
         "@tiptap/extension-placeholder": "^2.2.0",
         "@tiptap/extension-underline": "^2.2.0",
         "@tiptap/pm": "^2.1.16",
@@ -24,6 +26,7 @@
         "usehooks-ts": "^2.10.0"
     },
     "devDependencies": {
+        "@tanstack/eslint-plugin-query": "^5.18.1",
         "@types/react": "^18.2.43",
         "@types/react-dom": "^18.2.17",
         "@typescript-eslint/eslint-plugin": "^6.14.0",
