--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
         "body-parser": "^1.20.2",
         "dotenv": "^16.4.1",
         "express": "^4.18.2",
+        "express-oauth2-jwt-bearer": "^1.6.0",
         "migrate-mongo": "^11.0.0",
         "mongodb": "^6.3.0",
         "mongoose": "^8.1.1"
