--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "index.js",
     "devDependencies": {
         "concurrently": "^8.2.2",
-        "prettier": "^3.2.4"
+        "prettier": "^3.2.4",
+        "typescript": "^5.3.3"
     },
     "scripts": {
         "dev": "conc 'cd backend && npm run dev' 'cd frontend && npm run dev'",
