--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
         "prettier": "^3.2.4",
         "typescript": "^5.3.3"
     },
+    "engines": {
+        "node": "20.x"
+    },
     "scripts": {
         "dev": "conc 'cd backend && npm run dev' 'cd frontend && npm run dev'",
         "install": "cd frontend && npm i -D && cd ../backend && npm i -D",
