--- a/package.json
+++ b/package.json
@@ -5,8 +5,7 @@
     "main": "index.js",
     "devDependencies": {
         "concurrently": "^8.2.2",
-        "prettier": "^3.2.4",
-        "typescript": "^5.3.3"
+        "prettier": "^3.2.4"
     },
     "engines": {
         "node": "20.x"
