--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "prettier": "^3.2.4"
     },
     "engines": {
-        "node": "20.x"
+        "node": "20.8.0",
+        "npm": "10.1.0"
     },
     "scripts": {
         "dev": "conc 'cd backend && npm run dev' 'cd frontend && npm run dev'",
