--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,8 @@
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.21.3",
         "typescript": "^5.3.3",
-        "usehooks-ts": "^2.10.0"
+        "usehooks-ts": "^2.10.0",
+        "vite-plugin-svgr": "^4.2.0"
     },
     "devDependencies": {
         "@tanstack/eslint-plugin-query": "^5.18.1",
@@ -40,7 +41,6 @@
         "eslint-plugin-react-refresh": "^0.4.5",
         "postcss": "^8.4.33",
         "tailwindcss": "^3.4.1",
-        "vite": "^5.0.8",
-        "vite-plugin-svgr": "^4.2.0"
+        "vite": "^5.0.8"
     }
 }
