--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "scripts": {
         "dev": "conc 'cd backend && npm run dev' 'cd frontend && npm run dev'",
         "install": "cd frontend && npm i -D && cd ../backend && npm i -D",
-        "build": "cd frontend && npm run build && cd ../backend && npm run build",
+        "heroku-postbuild": "cd frontend && npm run build && cd ../backend && npm run build",
         "start": "cd backend && npm run serve",
         "lint": "cd backend && npm run lint && cd ../frontend && npm run lint",
         "format": "prettier . --write"
