--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
         "@auth0/auth0-react": "^2.2.4",
         "@tanstack/react-query": "^5.18.1",
         "@tanstack/react-query-devtools": "^5.18.1",
+        "@tiptap/extension-link": "^2.2.3",
         "@tiptap/extension-placeholder": "^2.2.0",
         "@tiptap/extension-underline": "^2.2.0",
         "@tiptap/pm": "^2.1.16",
